# ChangeLog for x11-wm/lwm
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/lwm/ChangeLog,v 1.13 2004/11/04 11:52:30 usata Exp $

  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> lwm-1.2.1.ebuild:
  Stable on x86 and ppc.

*lwm-1.2.1 (10 Oct 2004)

  10 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -lwm-1.1.5.ebuild,
  lwm-1.2.0.ebuild, +lwm-1.2.1.ebuild:
  Version bumped. Removed motif IUSE flag which is not relevant anymore.

  18 Jun 2004; Jason Wever <weeve@gentoo.org> lwm-1.2.0.ebuild:
  Stable on sparc.

*lwm-1.2.0 (21 Feb 2004)

  21 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> lwm-1.2.0.ebuild:
  Version bumped. Included a manpage. This closes bug #41842

  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> lwm-1.1.5.ebuild,
  lwm-1.1.6.ebuild:
  fixed motif dep

*lwm-1.1.6 (06 Dec 2003)

  06 Dec 2003; Brandon Hale <tseng@gentoo.org> lwm-1.1.6.ebuild:
  Version bump, closes 34908

  17 Sep 2003; Seemant Kulleen <seemant@gentoo.org> lwm-1.1.5.ebuild:
  added virtual/motif to DEPEND. Really, that should have been in there in the
  first place. Thanks to: Marius Mauch <genone@genone.de> in bug #28952

*lwm-1.1.5 (21 Aug 2003)

  21 Aug 2003; Seemant Kulleen <seemant@gentoo.org> lwm-1.1.5.ebuild:
  version bump thanks to Jim Nutt <jim@nuttz.org> in bug #24553

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*lwm-1.01 (22 May 2002)

  22 May 2002; Seemant Kulleen <seemant@gentoo.org> lwm-1.01.ebuild
  ChangeLog files/digest-lwm-1.01 :

  New package for lightweight window manager.