@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/selectwm
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/ChangeLog,v 1.14 2004/11/06 16:26:37 pyrania Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/selectwm/ChangeLog,v 1.15 2004/11/08 02:34:59 weeve Exp $
+
+  07 Nov 2004; Jason Wever <weeve@gentoo.org> selectwm-0.4.1.ebuild:
+  Stable on sparc.
 
   06 Nov 2004; <pyrania@gentoo.org> selectwm-0.4.1.ebuild:
   Marked stable on x86.
