@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/lwm
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/lwm/ChangeLog,v 1.13 2004/11/04 11:52:30 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/lwm/ChangeLog,v 1.14 2004/11/08 02:33:40 weeve Exp $
+
+  07 Nov 2004; Jason Wever <weeve@gentoo.org> lwm-1.2.1.ebuild:
+  Stable on sparc.
 
   04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> lwm-1.2.1.ebuild:
   Stable on x86 and ppc.
